# jax_rtrl

./: .gitignore  CITATION.cff  LICENSE  README.md  __init__.py  logging_util.py  optimizers.py  pyproject.toml  regularizers.py  usage.ipynb
eval/: aim_to_csv.py  delete_aim_runs.py  eval_util.py  fix_aim_runs.py  make_boxplot.py  make_latex_table.py  make_lineplot.py  make_video.py  wandb_to_csv.py  wandb_workspace.py
eval/plotting/: make_boxplot.py
jax_rtrl/: __init__.py  regularizers.py
jax_rtrl/models/: __init__.py  autoencoders.py  complex_synapses.py  consolidation.py  ctrnn.py  distributions.py  feedforward.py  jax_util.py  linear.py  lru.py  ltc.py  mlp.py  online_lru.py  plasticity.py  regularization.py  s5.py  seq_models.py  wirings.py
jax_rtrl/models/cells/: __init__.py  ctrnn.py  deer.py  deer_util.py  gru.py  hopfield.py  lif.py  lrc.py  lru.py  ltc.py  ode.md  ode.py
jax_rtrl/models/rtus/: README.md  linear_rtus.py  non_linear_rtus.py  rtus.py
jax_rtrl/networks/: autoencoders.py  critics.py  mobilenet_v3.py  policies.py
jax_rtrl/supervised/: dataloading.py  datasets.py  example_datasets.py  sequential_vault.py  supervised_offline.py  supervised_online.py  timing.py  train_torch_ds.py  training_utils.py
jax_rtrl/supervised/dataloaders/: basic.py  lra.py
jax_rtrl/util/: checkpointing.py  jax_util.py
models/: __init__.py  autoencoders.py  consolidation.py  ctrnn.py  dsae.py  jax_util.py  linear.py  lru.py  ltc.py  mlp.py  neural_networks.py  online_lru.py  plasticity.py  plasticity_rules_jax.py  s5.py  seq_models.py  seq_util.py  wirings.py
models/_s5/: seq_model.py  ssm.py  train.py  train_helpers.py
models/ctrnn/: ctrnn.py  plasticity.py
models/lru/: README.md  lru.py  lru_bptt.py  online_lru.py
models/rtus/: rtus.py  rtus_utils.py
models/s5/: layers.py  seq_model.py  train.py
models/s5/utils/: permutations.py
supervised/: dataloading.py  datasets.py  supervised_offline.py  supervised_online.py  timing.py  training_utils.py
test/: test_ctrnn.py  test_fa_types.py  test_hopfield.py  test_lif.py  test_lrc.py  test_supervised.py
test_jax_rtrl/: test_backprop.py  test_fa_types.py  test_lrc.py  test_lru.py  test_seq_models.py  test_supervised.py
