[tool.poetry]
name = "jax_rtrl"
version = "0.1.0"
description = ""
authors = ["Julian Lemmel <julian.lemmel@tuwien.ac.at>"]
readme = "README.md"
packages = [{include = "jax_rtrl"}]

[tool.poetry.dependencies]
python = "^3.10"
flax = "*"
plotly = "^5.24.1"
dacite = "^1.8.1"
simple-parsing = "^0.1.6"
distrax = "*"
tqdm = "^4.67.0"
poethepoet = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
install_jax_cuda12 = "pip install --upgrade \"jax[cuda12_pip]\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
