[tool.poetry]
name        = "jax_rtrl"
version     = "0.2.0"
description = ""
authors     = ["Julian Lemmel <julian.lemmel@tuwien.ac.at>"]
readme      = "README.md"
packages    = [{ include = "jax_rtrl" }]

[tool.poetry.dependencies]
python         = "^3.10"
flax           = "*"
plotly         = "^5.24.1"
dacite         = "^1.8.1"
simple-parsing = "^0.1.6"
distrax        = "*"
tqdm           = "^4.67.0"
poethepoet     = "*"
jaxtyping      = "*"
jax            = "<0.7.0"

[tool.poetry.group.torch_ds.dependencies]
chex   = "*"
einops = "*"
# flax = "0.11.0"
tensorflow-datasets = "*"
# torchvision = { url = "https://download.pytorch.org/whl/cpu/torchvision-0.18.0%2Bcpu-cp311-cp311-linux_x86_64.whl" }
# torchaudio = { url = "https://download.pytorch.org/whl/cpu/torchaudio-2.3.0%2Bcpu-cp311-cp311-linux_x86_64.whl" }
# torchtext = { url = "https://download.pytorch.org/whl/cpu/torchtext-0.18.0%2Bcpu-cp311-cp311-linux_x86_64.whl" }
# torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.3.0%2Bcpu-cp311-cp311-linux_x86_64.whl" }
torchtext   = "0.18.0"
torchvision = "0.18.0"
torchaudio  = "2.3.0"
torch       = "2.3.0"
pydub       = "*"
datasets    = "*"
# tqdm = "*"
# wandb = "*"
# jax = { extras = ["cuda12"], version = "0.6.2" }
# jaxlib = "0.6.2"
ml_collections = "*"


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
cuda = "poetry run pip install jax[cuda]"
